--- a/client/.project
+++ b/client/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>bin-debug</name>
 			<type>2</type>
-			<locationURI>DOCUMENTS/picnik_oss/website/app</locationURI>
+			<locationURI>DOCROOT/website/app</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
